[tool.poetry]
name = "hodgepodge"
version = "0.1.0"
description = "A hodgepodge of python files."
authors = ["Richard Okubo"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
dill = "^0.3.3"
matplotlib = "^3.3.4"
pandas = "^1.2.2"
scipy = "^1.6.1"
statsmodels = "^0.12.2"
pingouin = "^0.3.10"
sklearn = "^0.0"
scikit-fuzzy = "^0.4.2"
SQLAlchemy = "^1.4.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.21.0"
ipdb = "^0.13.4"
isort = "^5.7.0"
black = "^20.8b1"
MutPy = "^0.6.1"
pydocstyle = "^5.1.1"
pycodestyle = "^2.6.0"
pylint = "^2.7.2"
radon = "^4.3.2"
coverage = "^5.5"
pytest-cov = "^2.11.1"
mypy = "^0.812"
MonkeyType = "^20.5.0"
hypothesis = "^6.3.4"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
